<resources>
    <string name="app_name">COVID-19 Tracker</string>
    <string name="totalCases">Total Cases: </string>
    <string name="totalDeaths">Total Deaths: </string>
    <string name="totalRecovered">Total Recovered: </string>
    <string name="notSet">0</string>
    <string name="btnToSecondScreen">View By Country</string>
    <string name="emptyText">No Countries Added</string>
    <string name="add_country">Add Country</string>
    <string name="totalTodayCases">Total cases today:</string>
    <string name="totalTodayDeaths">Total deaths today</string>
</resources>
