<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_detail">

    <TextView
        android:id="@+id/countryHeadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyText"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/casesLinearLayout"
        android:textSize="30dp"
        android:padding="20dp"
        />
    <LinearLayout
        android:id="@+id/casesLinearLayout"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/totalCasesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalCases"
            />

        <TextView
            android:id="@+id/casesCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="0"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todayCasesLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/casesLinearLayout">

        <TextView
            android:id="@+id/totalTodayCasesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalTodayCases"
            />

        <TextView
            android:id="@+id/todayCasesCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="0"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/deathLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/casesLinearLayout"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/totalDeathTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalDeaths"
            />
        <TextView
            android:id="@+id/deathCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="0"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todayDeathLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/todayCasesLinearLayout"
        android:layout_toRightOf="@id/deathLinearLayout"
        >
        <TextView
            android:id="@+id/totalTodayDeathTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalTodayDeaths"
            />
        <TextView
            android:id="@+id/todayDeathCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="0"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/recoveredLinearLayout"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/deathLinearLayout"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/totalRecoveredTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalRecovered"
            />
        <TextView
            android:id="@+id/recoveredCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="0"
            />
    </LinearLayout>

</RelativeLayout>