<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/totalDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="52dp"
        android:text="@string/totalDeaths"
        android:textColor="@color/whiteColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/deathTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deathTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notSet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/whiteColor"
        android:layout_margin="10dp"
        />


    <TextView
        android:id="@+id/totalCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginRight="44dp"
        android:textColor="@color/whiteColor"
        android:layout_marginBottom="8dp"
        android:text="@string/totalCases"
        app:layout_constraintBottom_toTopOf="@+id/deathTextView"
        app:layout_constraintRight_toLeftOf="@+id/casesTextView" />

    <TextView
        android:id="@+id/casesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notSet"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/whiteColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/deathTextView"
        android:layout_margin="10dp"
        />


    <TextView
        android:id="@+id/totalRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalRecovered"
        android:textColor="@color/whiteColor"
        app:layout_constraintRight_toLeftOf="@+id/recoveredTextView"
        app:layout_constraintTop_toBottomOf="@+id/deathTextView"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/recoveredTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notSet"
        android:textColor="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deathTextView"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/btnNextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnToSecondScreen"
        android:background="@drawable/button_desing"
        android:textColor="@color/whiteColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deathTextView"
        android:layout_margin="50dp"
    />

    <TextView
        android:id="@+id/dateTimeTextView"
        android:text=""
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="15dp"
        android:textColor="@color/graycolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:text="Updated on : "
        android:textColor="@color/graycolor"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/dateTimeTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>